--- a/publications/paper/furax_comp_sep.bib
+++ b/publications/paper/furax_comp_sep.bib
@@ -1,3 +1,47 @@
+@article{Gorski2005,
+  title={HEALPix: a framework for high-resolution discretization and fast analysis of data distributed on the sphere},
+  author={G{\'o}rski, Krzysztof M and Hivon, Eric and Banday, Anthony J and Wandelt, Benjamin D and Hansen, Frode K and Reinecke, Martin and Bartelmann, Matthias},
+  journal={The Astrophysical Journal},
+  volume={622},
+  number={2},
+  pages={759},
+  year={2005},
+  publisher={IOP Publishing}
+}
+
+@article{Planck2020Legacy,
+  title={Planck 2018 results. I. Overview and the cosmological legacy of Planck},
+  author={Planck Collaboration and Aghanim, N. and Akrami, Y. and Ashdown, M. and Aumont, J. and Baccigalupi, C. and Ballardini, M. and others},
+  journal={Astronomy \& Astrophysics},
+  volume={641},
+  pages={A1},
+  year={2020},
+  publisher={EDP Sciences},
+  eprint={1807.06205},
+  archivePrefix={arXiv},
+  primaryClass={astro-ph.CO},
+  note={Masks available at \url{https://pla.esac.esa.int/pla/}}
+}
+
+@article{Liu1989,
+  title={On the limited memory BFGS method for large scale optimization},
+  author={Liu, Dong C and Nocedal, Jorge},
+  journal={Mathematical programming},
+  volume={45},
+  number={1-3},
+  pages={503--528},
+  year={1989},
+  publisher={Springer}
+}
+
+@misc{JeanZay2020,
+  title={Jean Zay supercomputer},
+  author={{GENCI}},
+  url={http://www.idris.fr/eng/jean-zay/jean-zay-presentation-eng.html},
+  year={2020},
+  note={GENCI-IDRIS, France}
+}
+
 @article{Krauss_2010,
   title     = {Primordial Gravitational Waves and Cosmology},
   volume    = {328},
@@ -68,19 +112,6 @@
   doi     = {10.1103/PhysRevD.92.063005}
 }
 
-@article{ErrardStompor2018,
-  author  = {Errard, Josquin and Stompor, Radek},
-  title   = {Foreground modeling and subtraction for cosmic microwave background B-mode observations},
-  journal = {Physical Review D},
-  volume  = {92},
-  number  = {6},
-  pages   = {063005},
-  year    = {2015},
-  doi     = {10.1103/PhysRevD.92.063005}
-}
-
-
-
 @article{LiteBIRD2022,
   title   = {LiteBIRD: a satellite for the studies of B-mode polarization and inflation from cosmic background radiation detection},
   author  = {Hazumi, Masashi et al.},
@@ -107,13 +138,14 @@
 
 
 
-@article{Planck2016Commander,
+
+@article{Planck2016SED,
   author  = {{Planck Collaboration}},
   title   = {Planck 2015 results. X. Diffuse component separation: Foreground maps},
-  journal = {A\&A},
+  journal = {Astron. Astrophys.},
   volume  = {594},
-  pages   = {A10},
   year    = {2016},
+  pages   = {A10},
   doi     = {10.1051/0004-6361/201525967}
 }
 
@@ -152,15 +184,6 @@
   primaryclass  = {astro-ph.CO}
 }
 
-@article{Planck2016SED,
-  author  = {{Planck Collaboration}},
-  title   = {Planck 2015 results. X. Diffuse component separation: Foreground maps},
-  journal = {Astron. Astrophys.},
-  volume  = {594},
-  year    = {2016},
-  pages   = {A10},
-  doi     = {10.1051/0004-6361/201525967}
-}
 
 @article{MeisnerFinkbeiner2015,
   author  = {Meisner, A.M. and Finkbeiner, D.P.},
@@ -386,17 +409,6 @@
   month     = nov
 }
 
-
-@article{Panexp_2025,
-  title         = {Full-sky Models of Galactic Microwave Emission and Polarization at Sub-arcminute Scales for the Python Sky Model},
-  author        = {Pan-Experiment Galactic Science Group and Julian Borrill and Susan E. Clark and Jacques Delabrouille and Andrei V. Frolov and Shamik Ghosh and Brandon S. Hensley and Monica D. Hicks and Nicoletta Krachmalnicoff and King Lau and Myra M. Norton and Clement Pryke and Giuseppe Puglisi and Mathieu Remazeilles and Elisa Russier and Benjamin Thorne and Jian Yao and Andrea Zonca},
-  year          = {2025},
-  eprint        = {2502.20452},
-  archiveprefix = {arXiv},
-  primaryclass  = {astro-ph.CO},
-  url           = {https://arxiv.org/abs/2502.20452}
-}
-
 @article{Zonca_2021,
   doi       = {10.21105/joss.03783},
   url       = {https://doi.org/10.21105/joss.03783},
@@ -450,61 +462,15 @@
   year      = {2019}
 }
 
-@article{Errard_2019,
-   title={Characterizing bias on large scale CMB 
-<mml:math xmlns:mml="http://www.w3.org/1998/Math/MathML" display="inline"><mml:mi>B</mml:mi></mml:math>
--modes after Galactic foregrounds cleaning},
-   volume={99},
-   ISSN={2470-0029},
-   url={http://dx.doi.org/10.1103/PhysRevD.99.043529},
-   DOI={10.1103/physrevd.99.043529},
-   number={4},
-   journal={Physical Review D},
-   publisher={American Physical Society (APS)},
-   author={Errard, Josquin and Stompor, Radek},
-   year={2019},
-   month=feb }
-
-@article{Gorski2005,
-   title={HEALPix: a framework for high-resolution discretization and fast analysis of data distributed on the sphere},
-   author={G{\'o}rski, Krzysztof M and Hivon, Eric and Banday, Anthony J and Wandelt, Benjamin D and Hansen, Frode K and Reinecke, Martin and Bartelmann, Matthias},
-   journal={The Astrophysical Journal},
-   volume={622},
-   number={2},
-   pages={759},
-   year={2005},
-   publisher={IOP Publishing}
-}
-
-@article{Planck2020Legacy,
-   title={Planck 2018 results. I. Overview and the cosmological legacy of Planck},
-   author={Planck Collaboration and Aghanim, N. and Akrami, Y. and Ashdown, M. and Aumont, J. and Baccigalupi, C. and Ballardini, M. and others},
-   journal={Astronomy \& Astrophysics},
-   volume={641},
-   pages={A1},
-   year={2020},
-   publisher={EDP Sciences},
-   eprint={1807.06205},
-   archivePrefix={arXiv},
-   primaryClass={astro-ph.CO},
-   note={Masks available at \url{https://pla.esac.esa.int/pla/}}
-}
-
-@article{Liu1989,
-   title={On the limited memory BFGS method for large scale optimization},
-   author={Liu, Dong C and Nocedal, Jorge},
-   journal={Mathematical programming},
-   volume={45},
-   number={1-3},
-   pages={503--528},
-   year={1989},
-   publisher={Springer}
-}
-
-@misc{JeanZay2020,
-   title={Jean Zay supercomputer},
-   author={{GENCI}},
-   url={http://www.idris.fr/eng/jean-zay/jean-zay-presentation-eng.html},
-   year={2020},
-   note={GENCI-IDRIS, France}
+@article{Planck2018_Overview,
+    author      = {{Planck Collaboration} and Aghanim, N. and Akrami, Y. and Ashdown, M. and Aumont, J. and Baccigalupi, C. and Ballardini, M. and Banday, A.~J. and Barreiro, R.~B. and Bartolo, N. and others},
+    title       = "{Planck 2018 results. I. Overview of products and scientific results}",
+    journal     = {Astronomy \& Astrophysics},
+    volume      = {641},
+    pages       = {A1},
+    year        = {2020},
+    doi         = {10.1051/0004-6361/201833880},
+    eprint      = {1807.06205},
+    archivePrefix = {arXiv},
+    primaryClass = {astro-ph.CO}
 }
