--- a/content/80-illustraions.ipynb
+++ b/content/80-illustraions.ipynb
@@ -16,7 +16,7 @@
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from jax_healpy import combine_masks, from_cutout_to_fullmap, get_clusters, get_cutout_from_mask\n",
+    "from jax_healpy import combine_masks, get_fullmap_from_cutout, get_clusters, get_cutout_from_mask\n",
     "from matplotlib.patches import Patch\n",
     "\n",
     "sys.path.append(\"../data\")\n",
@@ -515,7 +515,7 @@
     "full_map = combine_masks(maps_list, indices_list, nside)\n",
     "full_map = get_cutout_from_mask(full_map, full_indices)\n",
     "full_map = jax.tree.map(normalize_array, full_map)\n",
-    "full_map = from_cutout_to_fullmap(full_map, full_indices, nside)\n",
+    "full_map = get_fullmap_from_cutout(full_map, full_indices, nside)\n",
     "\n",
     "min_val = 0\n",
     "\n",
