--- a/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
+++ b/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cell-1",
    "metadata": {},
    "outputs": [
@@ -83,8 +83,8 @@
     "npixels = 12 * nside**2\n",
     "\n",
     "# Generate and load multi-frequency data\n",
-    "save_to_cache(nside, sky=\"c1d1s1\", noise=False)\n",
-    "nu, freq_maps = load_from_cache(nside, sky=\"c1d1s1\", noise=False)\n",
+    "save_to_cache(nside, sky=\"c1d1s1\")\n",
+    "nu, freq_maps = load_from_cache(nside, sky=\"c1d1s1\")\n",
     "print(f\"Frequency maps shape: {freq_maps.shape}\")\n",
     "print(f\"Frequencies: {len(nu)} bands from {nu[0]:.0f} to {nu[-1]:.0f} GHz\")\n",
     "\n",
