docs: update analysis notebooks and project configuration

--- a/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
+++ b/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "cell-3",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,10 @@
     "\n",
     "# Create objective function with fixed reference frequencies\n",
     "negative_log_likelihood_fn = partial(\n",
-    "    negative_log_likelihood, dust_nu0=dust_nu0, synchrotron_nu0=synchrotron_nu0\n",
+    "    negative_log_likelihood,\n",
+    "    dust_nu0=dust_nu0,\n",
+    "    synchrotron_nu0=synchrotron_nu0,\n",
+    "    analytical_gradient=True,\n",
     ")\n",
     "\n",
     "sky_signal_fn = partial(sky_signal, dust_nu0=dust_nu0, synchrotron_nu0=synchrotron_nu0)\n",
