docs: update notebooks to use new optimization API

--- a/notebooks/02_KMeans_Adaptive_Component_Separation.ipynb
+++ b/notebooks/02_KMeans_Adaptive_Component_Separation.ipynb
@@ -66,7 +66,6 @@
     "from furax.obs.landscapes import FrequencyLandscape\n",
     "from furax.obs.operators import NoiseDiagonalOperator\n",
     "from furax.obs.stokes import Stokes\n",
-    "from jax_grid_search import condition\n",
     "\n",
     "# JAX-HEALPix for clustering and sky operations\n",
     "from jax_healpy.clustering import (\n",
@@ -86,7 +85,7 @@
     "    save_to_cache,\n",
     ")\n",
     "from furax_cs.data.instruments import get_instrument\n",
-    "from furax_cs.optim import lbfgs_zoom"
+    "from furax_cs.optim import condition, lbfgs_zoom"
    ]
   },
   {
