--- a/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
+++ b/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
@@ -68,12 +68,12 @@
     "from furax import HomothetyOperator\n",
     "from furax.obs import negative_log_likelihood, sky_signal\n",
     "from furax.obs.stokes import Stokes\n",
-    "from jax_grid_search import optimize\n",
     "\n",
     "# JAX-HEALPix for mask and map operations\n",
     "from jax_healpy.clustering import get_cutout_from_mask, get_fullmap_from_cutout\n",
     "\n",
     "from furax_cs.data.generate_maps import get_mask, load_from_cache, save_to_cache\n",
+    "from furax_cs.optim import minimize\n",
     "\n",
     "# Configure JAX\n",
     "jax.config.update(\"jax_enable_x64\", True)\n",
@@ -335,7 +335,7 @@
     "print(\"This may take a few minutes...\")\n",
     "\n",
     "\n",
-    "final_params, final_state = optimize(\n",
+    "final_params, final_state = minimize(\n",
     "    initial_params,\n",
     "    negative_log_likelihood_fn,\n",
     "    solver,\n",
