--- a/notebooks/01_FGBuster_vs_FURAX_Comparison.ipynb
+++ b/notebooks/01_FGBuster_vs_FURAX_Comparison.ipynb
@@ -979,7 +979,8 @@
    "source": [
     "import optax\n",
     "import optax.tree_utils as otu\n",
-    "from jax_grid_search import optimize"
+    "\n",
+    "from furax_cs.optim import minimize"
    ]
   },
   {
@@ -1001,7 +1002,7 @@
     "\n",
     "params = {\"temp_dust\": 25.0, \"beta_dust\": 2.54, \"beta_pl\": -3.0}\n",
     "\n",
-    "final_params, final_state = optimize(\n",
+    "final_params, final_state = minimize(\n",
     "    params,\n",
     "    negative_log_likelihood,\n",
     "    solver,\n",
