docs(notebooks): update notebooks with latest execution and descriptions

--- a/notebooks/01_FGBuster_vs_FURAX_Comparison.ipynb
+++ b/notebooks/01_FGBuster_vs_FURAX_Comparison.ipynb
@@ -38,13 +38,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "W0112 19:13:44.233392   20882 cuda_executor.cc:1802] GPU interconnect information not available: INTERNAL: NVML doesn't support extracting fabric info or NVLink is not used by the device.\n",
-      "W0112 19:13:44.236115   20785 cuda_executor.cc:1802] GPU interconnect information not available: INTERNAL: NVML doesn't support extracting fabric info or NVLink is not used by the device.\n"
+      "W0112 19:29:24.580273   23547 cuda_executor.cc:1802] GPU interconnect information not available: INTERNAL: NVML doesn't support extracting fabric info or NVLink is not used by the device.\n",
+      "W0112 19:29:24.583136   23450 cuda_executor.cc:1802] GPU interconnect information not available: INTERNAL: NVML doesn't support extracting fabric info or NVLink is not used by the device.\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
     "# Core scientific computing\n",
     "import operator\n",
     "from functools import partial\n",
@@ -53,8 +52,6 @@
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import jaxopt\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import scienceplots  # noqa: F401\n",
     "\n",
     "# FGBuster - Traditional component separation framework\n",
@@ -339,9 +336,9 @@
      "text": [
       "Likelihood at true parameters: -27526803021880.71\n",
       "Performance of the negative log-likelihood evaluation:\n",
-      "7.09 ms ± 97.5 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "6.98 ms ± 129 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
       "Performance of the gradient evaluation:\n",
-      "16.7 ms ± 738 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "16.5 ms ± 592 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -549,7 +546,7 @@
     "scipy_solver = jaxopt.ScipyBoundedMinimize(\n",
     "    fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10, maxiter=1000, options=options\n",
     ")\n",
-    "bounds = ((0.5 , 10.0, -5.0), (0.6, 30.0, -1.0))\n",
+    "bounds = ((0.5, 10.0, -5.0), (0.6, 30.0, -1.0))\n",
     "result = scipy_solver.run(best_params, bounds, nu=nu, N=invN, d=d)"
    ]
   },
@@ -836,9 +833,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import optax\n",
-    "import optax.tree_utils as otu\n",
-    "\n",
     "from furax_cs.optim import minimize"
    ]
   },
@@ -853,28 +847,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100.00%|██████████| [00:13<00:00,  7.63%/s]\n"
+      "100.00%|██████████| [00:13<00:00,  7.64%/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final parameters: {'beta_dust': Array(1.54064957, dtype=float64), 'beta_pl': Array(-3.00886889, dtype=float64), 'temp_dust': Array(19.97764883, dtype=float64)}, number of evaluations: 1000\n",
-      "Initial Value: -27526803021625.72\n"
+      "Final parameters: {'beta_dust': Array(1.540539, dtype=float64), 'beta_pl': Array(-3.00612668, dtype=float64), 'temp_dust': Array(19.98228331, dtype=float64)}, number of evaluations: 1000\n",
+      "Initial Value: -27526803021731.92\n"
      ]
     }
    ],
    "source": [
     "negative_log_likelihood_fn = partial(\n",
-    "    negative_log_likelihood, dust_nu0=dust_nu0, synchrotron_nu0=synchrotron_nu0, analytical_gradient=True\n",
+    "    negative_log_likelihood,\n",
+    "    dust_nu0=dust_nu0,\n",
+    "    synchrotron_nu0=synchrotron_nu0,\n",
+    "    analytical_gradient=True,\n",
     ")\n",
     "\n",
     "params = {\"temp_dust\": 25.0, \"beta_dust\": 2.54, \"beta_pl\": -3.0}\n",
@@ -910,22 +907,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100.00%|██████████| [00:05<00:00, 16.70%/s]"
+      "100.00%|██████████| [00:05<00:00, 19.76%/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final parameters: {'beta_dust': Array(1.53999985, dtype=float64), 'beta_pl': Array(-2.99999927, dtype=float64), 'temp_dust': Array(20.00000528, dtype=float64)}, number of evaluations: <built-in method count of tuple object at 0x731a402c2340>\n",
-      "Initial Value: -27526803021880.71\n"
+      "Final parameters: {'beta_dust': Array(1.53999984, dtype=float64), 'beta_pl': Array(-2.99999825, dtype=float64), 'temp_dust': Array(20.00000541, dtype=float64)}, number of evaluations: <built-in method count of tuple object at 0x7ea1c8068e50>\n",
+      "Initial Value: -27526803021880.715\n"
      ]
     },
     {
@@ -938,7 +935,10 @@
    ],
    "source": [
     "negative_log_likelihood_fn = partial(\n",
-    "    negative_log_likelihood, dust_nu0=dust_nu0, synchrotron_nu0=synchrotron_nu0, analytical_gradient=True\n",
+    "    negative_log_likelihood,\n",
+    "    dust_nu0=dust_nu0,\n",
+    "    synchrotron_nu0=synchrotron_nu0,\n",
+    "    analytical_gradient=True,\n",
     ")\n",
     "\n",
     "params = {\"temp_dust\": 25.0, \"beta_dust\": 2.54, \"beta_pl\": -3.0}\n",
