--- a/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
+++ b/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
@@ -29,20 +29,7 @@
    "execution_count": null,
    "id": "cell-1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded freq_maps for nside 64 from cache and noise False.\n",
-      "Loaded freq_maps for nside 64 from cache.\n",
-      "Frequency maps shape: (15, 3, 49152)\n",
-      "Frequencies: 15 bands from 40 to 402 GHz\n",
-      "Sky coverage: 19.7% (9,695 pixels)\n",
-      "Masked data shape: (15, 9695)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup and Data Loading\n",
     "\n",
@@ -62,7 +49,6 @@
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import optax\n",
     "\n",
     "# FURAX framework\n",
     "from furax import HomothetyOperator\n",
@@ -101,6 +87,12 @@
     "masked_d = get_cutout_from_mask(d, indices, axis=1)\n",
     "print(f\"Masked data shape: {masked_d.shape}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b4x600oope",
+   "source": "## Step 2: Multi-Resolution Patch Generation\n\nThe PTEP method uses HEALPix `ud_grade` to create resolution-based patches:\n\n### How ud_grade Works\n1. **Downgrade**: Map pixels to lower resolution (fewer pixels)\n2. **Upgrade**: Map back to original resolution\n3. **Result**: Pixels that share the same low-res pixel become a patch\n\n### Resolution Choices\n- **beta_dust** (nside=64): Full resolution - varies pixel-by-pixel\n- **temp_dust** (nside=32): 4x fewer patches - varies more slowly\n- **beta_pl** (nside=16): 16x fewer patches - varies most slowly\n\nThis reduces the parameter count significantly while preserving physical variation scales.",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -264,37 +256,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3lhk6gth6j8",
+   "source": "## Step 3: Parameter Optimization\n\nWith resolution-based patches defined, we optimize spectral parameters at each patch.\n\n### Computational Advantage\n- Full resolution: 49,152 parameters per spectral index\n- PTEP approach: 9,695 + 2,516 + 682 = 12,893 total parameters\n- **3.8x reduction** in parameter count\n\n### Physical Justification\n- Dust temperature varies on ~1° scales → nside=32 sufficient\n- Synchrotron index varies on ~3° scales → nside=16 sufficient\n- Dust spectral index has finer structure → nside=64 needed",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cell-3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parameter initialization:\n",
-      "  beta_dust: 9695 patches at resolution, initial value = 1.54\n",
-      "  beta_pl: 682 patches at resolution, initial value = -3.0\n",
-      "  temp_dust: 2516 patches at resolution, initial value = 20.0\n",
-      "\n",
-      "Running multi-resolution optimization...\n",
-      "This may take a few minutes...\n",
-      "\n",
-      "Optimization completed!\n",
-      "Iterations: <built-in method count of OptimizerState object at 0x78903f54c190>\n",
-      "Final function value: -2.02e+07\n",
-      "\n",
-      "Optimized parameter ranges:\n",
-      "  beta_dust (nside=64): [1.308, 1.795], mean = 1.635 ± 0.045\n",
-      "  beta_pl (nside=16): [-3.216, -2.796], mean = -3.019 ± 0.054\n",
-      "  temp_dust (nside=32): [19.794, 20.097], mean = 20.017 ± 0.014\n",
-      "\n",
-      "CMB reconstruction completed\n",
-      "CMB shape: Q=(9695,), U=(9695,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Parameter Optimization\n",
     "\n",
@@ -328,19 +300,17 @@
     "# Create noise operator (simplified for demonstration)\n",
     "N = HomothetyOperator(jnp.ones(1), _in_structure=masked_d.structure)\n",
     "\n",
-    "# Setup L-BFGS optimizer\n",
-    "solver = optax.lbfgs()\n",
-    "\n",
     "print(\"\\nRunning multi-resolution optimization...\")\n",
     "print(\"This may take a few minutes...\")\n",
     "\n",
-    "\n",
+    "# Run optimization using unified minimize API\n",
     "final_params, final_state = minimize(\n",
-    "    initial_params,\n",
-    "    negative_log_likelihood_fn,\n",
-    "    solver,\n",
-    "    max_iter=100,  # Reduced for demo\n",
-    "    tol=1e-6,\n",
+    "    fn=negative_log_likelihood_fn,\n",
+    "    init_params=initial_params,\n",
+    "    solver_name=\"optax_lbfgs_zoom\",\n",
+    "    max_iter=1000,\n",
+    "    rtol=1e-10,\n",
+    "    atol=1e-8,\n",
     "    nu=nu,\n",
     "    N=N,\n",
     "    d=masked_d,\n",
@@ -349,7 +319,6 @@
     "\n",
     "# Show optimization results\n",
     "print(\"\\nOptimization completed!\")\n",
-    "print(f\"Iterations: {final_state.count}\")\n",
     "print(f\"Final function value: {final_state.value:.2e}\")\n",
     "\n",
     "# Display optimized parameter statistics\n",
@@ -373,6 +342,12 @@
     "print(\"\\nCMB reconstruction completed\")\n",
     "print(f\"CMB shape: Q={cmb_reconstruction.q.shape}, U={cmb_reconstruction.u.shape}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "i673urhbxr",
+   "source": "## Step 4: Parameter Map Reconstruction\n\nThe optimized parameters are mapped back to full resolution:\n1. Each pixel gets the value from its resolution patch\n2. The result shows the multi-resolution structure\n3. Lower-resolution parameters appear as larger uniform regions",
+   "metadata": {}
   },
   {
    "cell_type": "code",
