docs: update notebooks with new API and analysis workflows

--- a/notebooks/02_KMeans_Adaptive_Component_Separation.ipynb
+++ b/notebooks/02_KMeans_Adaptive_Component_Separation.ipynb
@@ -53,22 +53,11 @@
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import scienceplots  # noqa: F401\n",
-    "from furax._instruments.sky import (\n",
-    "    get_noise_sigma_from_instrument,\n",
-    ")  # FURAX framework\n",
+    "\n",
+    "# FURAX framework\n",
     "from furax.obs import negative_log_likelihood, sky_signal\n",
-    "from furax.obs.landscapes import FrequencyLandscape\n",
-    "from furax.obs.operators import NoiseDiagonalOperator\n",
     "from furax.obs.stokes import Stokes\n",
-    "\n",
-    "# JAX-HEALPix for clustering and sky operations\n",
-    "from jax_healpy.clustering import (\n",
-    "    find_kmeans_clusters,\n",
-    "    get_cutout_from_mask,\n",
-    "    get_fullmap_from_cutout,\n",
-    "    normalize_by_first_occurrence,\n",
-    ")\n",
-    "\n",
+    "from furax_cs import generate_noise_operator, kmeans_clusters\n",
     "from furax_cs.data import (\n",
     "    get_instrument,\n",
     "    get_mask,\n",
@@ -77,7 +66,13 @@
     "    load_from_cache,\n",
     "    save_to_cache,\n",
     ")\n",
-    "from furax_cs.optim import minimize"
+    "from furax_cs.optim import minimize\n",
+    "\n",
+    "# JAX-HEALPix for clustering and sky operations\n",
+    "from jax_healpy.clustering import (\n",
+    "    get_cutout_from_mask,\n",
+    "    get_fullmap_from_cutout,\n",
+    ")"
    ]
   },
   {
@@ -211,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -263,20 +258,12 @@
     "clusters = {}\n",
     "\n",
     "# Generate spherical K-means clusters on unmasked pixels\n",
-    "cluster_map = jax.tree.map(\n",
-    "    lambda c: find_kmeans_clusters(\n",
-    "        mask,\n",
-    "        indices,\n",
-    "        c,\n",
-    "        jax.random.PRNGKey(42),  # Fixed seed for reproducibility\n",
-    "        max_centroids=c,\n",
-    "        initial_sample_size=1,\n",
-    "    ),\n",
+    "cluster_map = kmeans_clusters(\n",
+    "    jax.random.PRNGKey(42),  # Fixed seed for reproducibility\n",
+    "    mask,\n",
+    "    indices,\n",
     "    cluster_config,\n",
-    ")\n",
-    "\n",
-    "cluster_map = jax.tree.map(\n",
-    "    lambda arr, c: normalize_by_first_occurrence(arr, c, c), cluster_map, cluster_config\n",
+    "    initial_sample_size=1,\n",
     ")\n",
     "\n",
     "cluster_map = {f\"{param}_patches\": patches for param, patches in cluster_map.items()}\n",
@@ -353,19 +340,11 @@
     "\n",
     "instrument = get_instrument(\"LiteBIRD\")\n",
     "nu = instrument.frequency\n",
-    "f_landscapes = FrequencyLandscape(nside, instrument.frequency, \"QU\")\n",
     "\n",
     "key = jax.random.PRNGKey(noise_id)\n",
-    "white_noise = f_landscapes.normal(key) * noise_ratio\n",
-    "white_noise = get_cutout_from_mask(white_noise, indices, axis=1)\n",
-    "sigma = get_noise_sigma_from_instrument(instrument, nside, stokes_type=\"QU\")\n",
-    "noise = white_noise * sigma\n",
-    "noised_d = masked_d + noise\n",
-    "\n",
-    "small_n = (sigma * noise_ratio) ** 2\n",
-    "small_n = 1.0 if noise_ratio == 0 else small_n\n",
-    "\n",
-    "N = NoiseDiagonalOperator(small_n, _in_structure=masked_d.structure)\n",
+    "noised_d, N = generate_noise_operator(\n",
+    "    key, noise_ratio, indices, nside, masked_d, instrument, stokes_type=\"QU\"\n",
+    ")\n",
     "N.in_structure()"
    ]
   },
