--- a/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
+++ b/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
@@ -54,12 +54,12 @@
     "from furax import HomothetyOperator\n",
     "from furax.obs import negative_log_likelihood, sky_signal\n",
     "from furax.obs.stokes import Stokes\n",
+    "from furax_cs import multires_clusters\n",
+    "from furax_cs.data.generate_maps import get_mask, load_from_cache, save_to_cache\n",
+    "from furax_cs.optim import minimize\n",
     "\n",
     "# JAX-HEALPix for mask and map operations\n",
     "from jax_healpy.clustering import get_cutout_from_mask, get_fullmap_from_cutout\n",
-    "\n",
-    "from furax_cs.data.generate_maps import get_mask, load_from_cache, save_to_cache\n",
-    "from furax_cs.optim import minimize\n",
     "\n",
     "# Configure JAX\n",
     "jax.config.update(\"jax_enable_x64\", True)\n",
@@ -91,8 +91,24 @@
   {
    "cell_type": "markdown",
    "id": "9b4x600oope",
-   "source": "## Step 2: Multi-Resolution Patch Generation\n\nThe PTEP method uses HEALPix `ud_grade` to create resolution-based patches:\n\n### How ud_grade Works\n1. **Downgrade**: Map pixels to lower resolution (fewer pixels)\n2. **Upgrade**: Map back to original resolution\n3. **Result**: Pixels that share the same low-res pixel become a patch\n\n### Resolution Choices\n- **beta_dust** (nside=64): Full resolution - varies pixel-by-pixel\n- **temp_dust** (nside=32): 4x fewer patches - varies more slowly\n- **beta_pl** (nside=16): 16x fewer patches - varies most slowly\n\nThis reduces the parameter count significantly while preserving physical variation scales.",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## Step 2: Multi-Resolution Patch Generation\n",
+    "\n",
+    "The PTEP method uses HEALPix `ud_grade` to create resolution-based patches:\n",
+    "\n",
+    "### How ud_grade Works\n",
+    "1. **Downgrade**: Map pixels to lower resolution (fewer pixels)\n",
+    "2. **Upgrade**: Map back to original resolution\n",
+    "3. **Result**: Pixels that share the same low-res pixel become a patch\n",
+    "\n",
+    "### Resolution Choices\n",
+    "- **beta_dust** (nside=64): Full resolution - varies pixel-by-pixel\n",
+    "- **temp_dust** (nside=32): 4x fewer patches - varies more slowly\n",
+    "- **beta_pl** (nside=16): 16x fewer patches - varies most slowly\n",
+    "\n",
+    "This reduces the parameter count significantly while preserving physical variation scales."
+   ]
   },
   {
    "cell_type": "code",
@@ -121,62 +137,27 @@
     "# Multi-Resolution Patch Generation\n",
     "\n",
     "# Configure resolution parameters for different spectral indices\n",
-    "target_ud_grade = [64, 32, 16]  # Target nside values for [beta_dust, temp_dust, beta_pl]\n",
-    "ud_beta_d = int(target_ud_grade[0])  # Dust spectral index resolution\n",
-    "ud_temp_d = int(target_ud_grade[1])  # Dust temperature resolution\n",
-    "ud_beta_pl = int(target_ud_grade[2])  # Synchrotron spectral index resolution\n",
+    "target_ud_grade = {\n",
+    "    \"beta_dust\": 64,\n",
+    "    \"temp_dust\": 32,\n",
+    "    \"beta_pl\": 16,\n",
+    "}\n",
+    "ud_beta_d = target_ud_grade[\"beta_dust\"]\n",
+    "ud_temp_d = target_ud_grade[\"temp_dust\"]\n",
+    "ud_beta_pl = target_ud_grade[\"beta_pl\"]\n",
     "\n",
     "print(\"Multi-resolution configuration:\")\n",
     "print(f\"  Dust spectral index (beta_dust): nside={ud_beta_d} ({12 * ud_beta_d**2:,} pixels)\")\n",
     "print(f\"  Dust temperature (temp_dust): nside={ud_temp_d} ({12 * ud_temp_d**2:,} pixels)\")\n",
     "print(f\"  Synchrotron index (beta_pl): nside={ud_beta_pl} ({12 * ud_beta_pl**2:,} pixels)\")\n",
     "\n",
-    "# Create pixel index arrays for ud_grade operations\n",
-    "npix = nside**2 * 12\n",
-    "ipix = np.arange(npix)\n",
-    "\n",
-    "\n",
-    "def ud_grade(ipix, nside_in, nside_out):\n",
-    "    \"\"\"Downgrade and upgrade pixel indices to create resolution patches.\"\"\"\n",
-    "    if nside_out == 0:\n",
-    "        return np.zeros_like(ipix)\n",
-    "    else:\n",
-    "        # Downgrade to target resolution then upgrade back to original\n",
-    "        lowered = hp.ud_grade(ipix, nside_out=nside_out)\n",
-    "        return hp.ud_grade(lowered, nside_out=nside_in)\n",
-    "\n",
-    "\n",
     "# Generate resolution-based patch indices\n",
     "print(\"\\nGenerating multi-resolution patches...\")\n",
-    "ud_beta_d_map = ud_grade(ipix, nside, ud_beta_d)\n",
-    "ud_temp_d_map = ud_grade(ipix, nside, ud_temp_d)\n",
-    "ud_beta_pl_map = ud_grade(ipix, nside, ud_beta_pl)\n",
-    "\n",
-    "# Create patch index dictionary\n",
-    "patch_indices = {\n",
-    "    \"beta_dust_patches\": ud_beta_d_map,\n",
-    "    \"temp_dust_patches\": ud_temp_d_map,\n",
-    "    \"beta_pl_patches\": ud_beta_pl_map,\n",
-    "}\n",
-    "\n",
-    "# Extract masked patches and normalize indices\n",
-    "masked_patches = get_cutout_from_mask(patch_indices, indices)\n",
-    "\n",
-    "\n",
-    "def normalize_array(arr):\n",
-    "    \"\"\"Normalize patch indices for consistent indexing.\"\"\"\n",
-    "    unique_vals, indices_norm = np.unique(arr, return_inverse=True)\n",
-    "    return indices_norm\n",
-    "\n",
-    "\n",
-    "masked_patches = jax.tree.map(normalize_array, masked_patches)\n",
-    "masked_patches = jax.tree.map(lambda x: x.astype(jnp.int64), masked_patches)\n",
+    "masked_patches = multires_clusters(mask, indices, target_ud_grade, nside)\n",
     "\n",
     "# Count unique patches for each parameter\n",
     "max_count = {\n",
-    "    \"beta_dust\": np.unique(masked_patches[\"beta_dust_patches\"]).size,\n",
-    "    \"temp_dust\": np.unique(masked_patches[\"temp_dust_patches\"]).size,\n",
-    "    \"beta_pl\": np.unique(masked_patches[\"beta_pl_patches\"]).size,\n",
+    "    key.replace(\"_patches\", \"\"): int(jnp.unique(val).size) for key, val in masked_patches.items()\n",
     "}\n",
     "\n",
     "print(\"Resolution patch counts:\")\n",
@@ -258,8 +239,22 @@
   {
    "cell_type": "markdown",
    "id": "3lhk6gth6j8",
-   "source": "## Step 3: Parameter Optimization\n\nWith resolution-based patches defined, we optimize spectral parameters at each patch.\n\n### Computational Advantage\n- Full resolution: 49,152 parameters per spectral index\n- PTEP approach: 9,695 + 2,516 + 682 = 12,893 total parameters\n- **3.8x reduction** in parameter count\n\n### Physical Justification\n- Dust temperature varies on ~1° scales → nside=32 sufficient\n- Synchrotron index varies on ~3° scales → nside=16 sufficient\n- Dust spectral index has finer structure → nside=64 needed",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## Step 3: Parameter Optimization\n",
+    "\n",
+    "With resolution-based patches defined, we optimize spectral parameters at each patch.\n",
+    "\n",
+    "### Computational Advantage\n",
+    "- Full resolution: 49,152 parameters per spectral index\n",
+    "- PTEP approach: 9,695 + 2,516 + 682 = 12,893 total parameters\n",
+    "- **3.8x reduction** in parameter count\n",
+    "\n",
+    "### Physical Justification\n",
+    "- Dust temperature varies on ~1° scales → nside=32 sufficient\n",
+    "- Synchrotron index varies on ~3° scales → nside=16 sufficient\n",
+    "- Dust spectral index has finer structure → nside=64 needed"
+   ]
   },
   {
    "cell_type": "code",
@@ -346,8 +341,15 @@
   {
    "cell_type": "markdown",
    "id": "i673urhbxr",
-   "source": "## Step 4: Parameter Map Reconstruction\n\nThe optimized parameters are mapped back to full resolution:\n1. Each pixel gets the value from its resolution patch\n2. The result shows the multi-resolution structure\n3. Lower-resolution parameters appear as larger uniform regions",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "## Step 4: Parameter Map Reconstruction\n",
+    "\n",
+    "The optimized parameters are mapped back to full resolution:\n",
+    "1. Each pixel gets the value from its resolution patch\n",
+    "2. The result shows the multi-resolution structure\n",
+    "3. Lower-resolution parameters appear as larger uniform regions"
+   ]
   },
   {
    "cell_type": "code",
