--- a/notebooks/01_FGBuster_vs_FURAX_Comparison.ipynb
+++ b/notebooks/01_FGBuster_vs_FURAX_Comparison.ipynb
@@ -902,7 +902,7 @@
    "source": [
     "### L-BFGS: A Powerful Second-Order Method\n",
     "\n",
-    "When working on noiseless data, L-BFGS can significantly speed up convergence due to its use of second-order information. Here, we switch to the `optax_lbfgs_zoom` optimizer to leverage these advantages."
+    "When working on noiseless data, L-BFGS can significantly speed up convergence due to its use of second-order information. Here, we switch to the `optax_lbfgs` optimizer to leverage these advantages."
    ]
   },
   {
@@ -946,7 +946,7 @@
     "final_params, final_state = minimize(\n",
     "    negative_log_likelihood_fn,\n",
     "    params,\n",
-    "    \"optax_lbfgs_zoom\",\n",
+    "    \"optax_lbfgs\",\n",
     "    max_iter=1000,\n",
     "    atol=1e-15,\n",
     "    rtol=1e-12,\n",
