--- a/notebooks/02_KMeans_Adaptive_Component_Separation.ipynb
+++ b/notebooks/02_KMeans_Adaptive_Component_Separation.ipynb
@@ -381,7 +381,7 @@
     "# Setup optimization parameters\n",
     "dust_nu0 = 150.0  # Dust reference frequency (GHz)\n",
     "synchrotron_nu0 = 20.0  # Synchrotron reference frequency (GHz)\n",
-    "SOLVER_BACKEND = \"active_set\"  # Options: \"optax_lbfgs_zoom\", \"scipy_tnc\", \"active_set\"\n",
+    "SOLVER_BACKEND = \"active_set\"  # Options: \"optax_lbfgs\", \"scipy_tnc\", \"active_set\"\n",
     "TOLERANCE = 1e-15\n",
     "MAX_ITER = 2000\n",
     "\n",
