--- a/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
+++ b/notebooks/03_PTEP_Multi_Resolution_Component_Separation.ipynb
@@ -302,7 +302,7 @@
     "final_params, final_state = minimize(\n",
     "    fn=negative_log_likelihood_fn,\n",
     "    init_params=initial_params,\n",
-    "    solver_name=\"optax_lbfgs_zoom\",\n",
+    "    solver_name=\"optax_lbfgs\",\n",
     "    max_iter=1000,\n",
     "    rtol=1e-10,\n",
     "    atol=1e-8,\n",
